backend/k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-edge-backend-ingress
  namespace: iot-edge
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - api.iot-edge.digital-edge.sa
    secretName: iot-edge-tls
  rules:
  - host: api.iot-edge.digital-edge.sa
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: iot-edge-backend
            port:
              number: 80
      - path: /socket.io(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: iot-edge-backend
            port:
              number: 80
